# one-shot-prompt-voice-agent

./: .editorconfig  .env.example  .gitignore  Current_Prompt.txt  DELIVERABLES.md  Dockerfile.backend  Dockerfile.frontend  README.md  SECURITY.md  docker-compose.yml  test_payload.json
_audit/: backend_files.txt  directory_full.txt  directory_inventory.txt  npm_installed.txt  placeholders_filtered.txt  project_files.txt  tech_stack.txt
backend/: .env.example  Dockerfile  FULL_BACKEND_DIRECTORY.md  app.py  main.py  pyproject.toml  requirements-core.txt  requirements.txt  test_agent_node.py  test_invoke.py  test_memory_e2e.py  test_payload.json  test_unified_memory.py
backend/agents/: __init__.py  graph.py  prompt_chain_template.py  prompt_loader.py  prompt_manager.py  state.py
backend/agents/nodes/: __init__.py  agent_node.py  memory_node.py  orchestrator.py  response_generator.py  route_tools.py  supervisor.py  voice_processor.py
backend/api/: agent_api.py  agents.py  feedback.py  health.py  livekit.py  mcp.py  voice.py
backend/core/: config.py  database.py  init.sql  logger.py  openai_streaming.py
backend/integrations/: __init__.py  agent_bridge.py  livekit_agent.py  livekit_llm_adapter.py  voice_pipeline.py
backend/memory/: memory_manager.py  unified_memory_manager.py
backend/models/: __init__.py  agent.py  conversation.py  user.py
backend/prompts/: agent_specific_prompt.json  human_prompt.json
backend/prompts/1b67c286-9767-408a-99e2-e5c6d5284beb/: agent_attributes.json  agent_specific_prompt.json
backend/prompts/e91d1dd9-e37e-484c-acba-f1d8a834f950/: agent_attributes.json  agent_specific_prompt.json
backend/scripts/: containerapps.azcli.ps1  pack.ps1  run-local.ps1  setup.ps1  test.ps1
backend/services/: __init__.py  deepgram_service.py  elevenlabs_service.py  livekit_service.py  mcp_service.py  memory_service.py  reflection_service.py  rl_service.py  vector_store.py
backend/tests/: test_agent_api.py  test_architecture_flow.py  test_feedback_integration.py  test_graph.py  test_livekit_integration.py  test_livekit_io.py  test_memory.py  test_memory_manager.py  test_prompt_loader.py  test_state.py  test_voice_integration.py
backend/tools/: livekit_io.py  memory_mem0.py  stt_deepgram.py  telephony.py  tts_elevenlabs.py  vision.py
frontend/: .env.example  Dockerfile  globals.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/agent/: AgentBuilderForm.tsx
frontend/components/chat/: AgentSelector.tsx  ChatInterface.tsx  ConversationSidebar.tsx
frontend/components/layout/: Header.tsx
frontend/components/mcp/: MCPCatalog.tsx  MCPConfigForm.tsx  MCPConnectorEditor.tsx  MCPTestPanel.tsx  types.ts  useMCP.ts
frontend/components/ui/: theme-toggle.tsx
frontend/public/: manifest.json  site.webmanifest
infra/: docker-compose.yml  render.yaml  vercel.json
prompts/: coder.md  deployer.md  orchestrator.md  qa.md  supervisor.md
scripts/: docker-build.ps1  setup.ps1  start-dev.ps1  validate.ps1
